fix : foto on mobile

--- a/mainsite/static/mainsite/style.css
+++ b/mainsite/static/mainsite/style.css
@@ -1021,7 +1021,7 @@ header  a {
   .link-block__menu {
     width:100%;
   }
-.foto{
+.foto-conteiner{
   width: 100%;
   height: 101vw;
 }
